--- a/src/components/navigableMenu/styles.module.scss
+++ b/src/components/navigableMenu/styles.module.scss
@@ -1,6 +1,10 @@
+.menu{
+    position: relative;
+}
 .item{
     display: flex;
     padding: 0.8em 1em;
+    position: relative;
     align-items: center;
     cursor: pointer;
     gap: 1em;
@@ -17,9 +21,7 @@
 .container{
     display: flex;
     flex-flow: column;
-    border-radius: 0.4em;
     overflow: hidden;
     background-color: var(--nav-subitem-bg);
     padding: 0.4em 0em 0.4em 0em;
-    box-shadow: 1px 1px 10px #0000009c;
 }
