--- a/src/components/PressEffect/styles.module.scss
+++ b/src/components/PressEffect/styles.module.scss
@@ -1,7 +1,10 @@
 
 .container {
     position: absolute;
-    inset:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    top: 0;
     cursor: pointer; /* Para mostrar un cursor de puntero al pasar el ratón */
 }
 
